--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@
 #f0810f
 #efdab1
 
-#wrapper {
-    background-color: #efdab1;
+body {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
 }
 
 #stats {
@@ -16,16 +18,9 @@
     display: flex;
     flex-direction: column;
 }
-h2 {
-
-}
 
 h4 {
     padding: 0 20px;
     color: #c6e2ff;
 }
-#age {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
-}
+
